--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,10 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
-- script: |
+- script: 
     echo True confessions
     echo Chipotle is the best fast food
   displayName: 'Run a the true confessions script'
+
+- script: hello.sh
+  displayName: 'Call external script'
