--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ steps:
 
 - script: hello.sh
   displayName: 'Call external script'
-- task: BatchScript@1
+
+- task: Bash@3
   inputs:
-    filename: 'hello.sh'
+    filePath: 'hello.sh'
