Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
     echo Chipotle is the best fast food
   displayName: 'Run a the true confessions script'
 
-- script: hello.sh
+- script: ./hello.sh
   displayName: 'Call external script'
 
 - task: Bash@3
